--- a/M-V.html
+++ b/M-V.html
@@ -357,7 +357,7 @@ Née Libertad Granja en 1915 au Pays basque espagnol, elle épouse Francisco Baj
     <div id="piedpage">
         <a href="plan-fr.html"><button class="btnplan" type="button" style="cursor: pointer;">Plan</button></a>
         <a href="page-transition-collection.html"><button class="btncollec" type="button" style="cursor: pointer; width: 23%; padding-left: 4px;">Biographie</button></a>
-        <button class="btnvisite" type="button">Visite</button>
+        <button class="btnvisite" type="button"style="cursor: pointer;">Visite</button>
         <a href="infos.html"><button class="btninfo" type="button"style="cursor: pointer;">Infos</button></a>
         <a href="village.html"><button class="btnvillage" type="button" style="cursor: pointer;">Village</button></a>
     </div>
