--- a/testMp3d.html
+++ b/testMp3d.html
@@ -4,23 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Visite virtuelle- Musée</title>
 </head>
 <style>
     html, body {
 	margin: 0;
 	padding: 0;
 	height: 100vh;
-    overflow-x: hidden;
+    overflow: hidden;
     background-color: black;
+}
+
+header{
+    background-color: rgb(39, 39, 39);
+    height: 50px;
+
+}
+
+
+#header h2{
+    color: darkgoldenrod;
+    text-align: center;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-style:italic; 
+    margin-top: 0px;
 }
 
 iframe{
     position: absolute;
-top: 0;
+top: 45px;
 left: 0;
 width: 100%;
-height: 91%;
+height: 96%;
 }
 
 #piedpage {
@@ -164,17 +179,26 @@ footer{
 
 </style>
 <body>
-    <iframe width='853' height='480' src='https://my.matterport.com/show/?m=KFa1rxb2kTn' frameborder='0' allowfullscreen allow='xr-spatial-tracking'></iframe>
+
+    <header>
+        <div id="header">
+            
+            <h2>Visite virtuelle</h2>
+
+        </div>
+    </header>
+    <iframe width='853' height='500' src='https://my.matterport.com/show/?m=KFa1rxb2kTn' frameborder='0' allowfullscreen allow='xr-spatial-tracking'></iframe>
 
 
     <footer>
         <div id="piedpage">
             <a href="plan-fr.html"><button class="btnplan" type="button" style="cursor: pointer;">Plan</button></a>
             <a href="page-transition-collection.html"><button class="btncollec" type="button" style="cursor: pointer; width: 23%; padding-left: 4px;">Biographie</button></a>
-            <a href="testMp3d.html"><button class="btnvisite" type="button">Visite</button></a>
+            <a href="testMp3d.html"><button class="btnvisite" type="button"style="cursor: pointer;">Visite</button></a>
             <a href="infos.html"><button class="btninfo" type="button"style="cursor: pointer;">Infos</button></a>
             <a href="village.html"><button class="btnvillage" type="button" style="cursor: pointer;">Village</button></a>
         </div>
     </footer>
 </body>
 </html>
+
